Use getLast for the top experience tier
Both weight formulas reached the last tier by index.